--- a/css/custom.css
+++ b/css/custom.css
@@ -1,12 +1,68 @@
+@font-face {
+	font-family: "Nunito";
+	src: url('../fonts/Nunito/Nunito-Regular.ttf');
+}
+
 html, body {
 	background-color: #f5f5f5;
 }
 
 nav.uk-navbar {
-	background-color: #fefefe !important;
-	padding-left: 35px;
-	padding-right: 35px;
+	background-color: #222 !important;
+	padding-left: 75px;
+	padding-right: 75px;
 	z-index: 999;
+}
+
+nav.uk-navbar.uk-position-top.uk-position-absolute {
+	background: rgba(0,0,0,0.3) !important;
+	padding-left: 75px;
+	padding-right: 75px;
+	z-index: 999;
+}
+
+/* .uk-article > p {
+	color: #fefefe !important;
+	font-weight: 500;
+} */
+
+.writer-img {
+	margin-top: -50px;
+}
+
+.writer-img > .uk-card {
+	width: 100px;
+	height: 100px;
+}
+
+.writer-img > .uk-card > div {
+	padding: 5px;
+}
+
+.custom-container {
+	padding-right: 150px !important;
+	padding-left: 150px !important;
+}
+
+.custom-article-container {
+	padding-right: 250px !important;
+	padding-left: 250px !important;
+}
+
+.custom-article-header-container {
+	padding-right: 150px !important;
+	padding-left: 150px !important;
+}
+
+.uk-overlay {
+	padding: 30px 30px;
+}
+
+.header-container {
+	padding-right: 350px !important;
+	padding-left: 350px !important;
+	padding-top: 25px;
+	padding-bottom: 0px;
 }
 
 @media only screen and (max-width: 640px) {
@@ -16,21 +72,61 @@ nav.uk-navbar {
 		padding-right: 0px;
 		z-index: 999;
 	}
+
+	nav.uk-navbar.uk-position-top.uk-position-absolute {
+		background: rgba(0,0,0,0.3) !important;
+		padding-left: 0px;
+		padding-right: 15px;
+		z-index: 999;
+	}
+
+	.header-text {
+		font-size: 20px !important;
+	}
+
+	.custom-container {
+		padding-right: 20px !important;
+		padding-left: 20px !important;
+	}
+	
+	.custom-article-container {
+		padding-right: 10px !important;
+		padding-left: 10px !important;
+	}
+	
+	.custom-article-header-container {
+		padding-right: 0px !important;
+		padding-left: 0px !important;
+	}
+	
+	.header-container {
+		padding-right: 5px !important;
+		padding-left: 5px !important;
+		padding-top: 75px;
+		padding-bottom: 50px;
+	}
+	
+	.uk-overlay {
+		padding: 15px 30px;
+	}
 }
 
 .uk-navbar-nav>li>a {
 	/* background-color: #2f8be1; */
-	color: #2f8be1 !important;
-	padding: 7px 10px;
+	color: #fefefe !important;
+	/* padding: 7px 10px; */
 	font-weight: bold;
 }
 
 .heading-1 {
-	background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('../img/bg-new.jpg');
+	background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('../img/bg-new.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
-	height: 500px;
+}
+
+.nunito-font {
+	font-family: "Nunito", sans-serif !important;
 }
 
 h1.heading-title {
@@ -39,13 +135,67 @@ h1.heading-title {
 
 .header-text {
 	color: #fefefe !important;
+	font-size: 20px;
+}
+
+.explore {
+	color: #444;
 }
 
 .heading-3 {
-	background-color: #1976d2;
+	background-color: #666;
 }
 
+.heading-3 > div > h2 {
+	color: #fefefe !important;
+}
+
+.navbar-mobile {
+	color:#f0d875;
+}
+
+/* .uk-button-primary {
+	background-color: #FFA900;
+} */
+
 #footer {
-	background-color: #fefefe;
+	background-color: #222;
 	font-weight: 500;
+}
+
+.footer-header {
+	color: #fefefe;
+}
+
+.uk-button {
+	border-radius: 10px !important;
+	font-weight: 500;
+}
+
+.uk-navbar-dropdown {
+	background: rgba(0,0,0,0.5) !important;
+}
+
+.uk-navbar-dropdown > ul > li > a {
+	font-weight: 500 !important;
+	color: #fefefe !important;
+}
+
+.uk-navbar-dropdown > ul > li > a:hover {
+	font-weight: 500 !important;
+	color: #f0d875 !important;
+}
+
+.quotes-item {
+	font-weight: 500;
+	color: #444;
+}
+
+.in-depth-invest > div > div.uk-card {
+	border-radius: 10px;
+	box-shadow: none;
+}
+
+.another-section {
+	background-color: #f1f1f1;
 }
