--- a/css/custom.css
+++ b/css/custom.css
@@ -21,10 +21,10 @@ nav.uk-navbar.uk-position-top.uk-position-absolute {
 	z-index: 999;
 }
 
-/* .uk-article > p {
-	color: #fefefe !important;
+.uk-article > p.nunito-font {
+	color: #fefefe;
 	font-weight: 500;
-} */
+}
 
 .writer-img {
 	margin-top: -50px;
@@ -133,6 +133,32 @@ h1.heading-title {
 	color: #fefefe !important;
 }
 
+.nav-bottom > li > a {
+	color: #666 !important;
+}
+
+.card-investment {
+	border-radius: 35px;
+	border-right: 5px solid #999;
+	border-left: 5px solid #999;
+}
+
+.course-header {
+	background-color: #1d214f;
+}
+
+.course-list-detail {
+	font-size: 20px !important;
+}
+
+.text-white {
+	color: white !important;
+}
+
+.course-desc {
+	font-weight: 500;
+}
+
 .header-text {
 	color: #fefefe !important;
 	font-size: 20px;
@@ -143,15 +169,28 @@ h1.heading-title {
 }
 
 .heading-3 {
-	background-color: #666;
+	background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url('../img/bitmap.png');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 .heading-3 > div > h2 {
 	color: #fefefe !important;
 }
 
+.about-team {
+	width: 200px !important;
+}
+
+.article-details {
+	color: #fefefe;
+	background-color: rgba(0,0,0,0.3);
+}
+
 .navbar-mobile {
-	color:#f0d875;
+	color:#fefefe;
+	margin-right: 10px;
 }
 
 /* .uk-button-primary {
@@ -173,7 +212,7 @@ h1.heading-title {
 }
 
 .uk-navbar-dropdown {
-	background: rgba(0,0,0,0.5) !important;
+	background: rgba(0,0,0,0.8) !important;
 }
 
 .uk-navbar-dropdown > ul > li > a {
